--- a/Manchu_English_NMT_Tokenization_&_Fine_Tuning.ipynb
+++ b/Manchu_English_NMT_Tokenization_&_Fine_Tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM9I+oPjmUxUjLffMljC9P2",
+      "authorship_tag": "ABX9TyORO9i9XRnNRXDZcDboLu1U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "3TUhqxcLP_Pr",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d68b46d7-1638-4a99-8f9e-c4e3aa8960cb"
+        "outputId": "94e8f709-d5a0-49b2-bacf-dac893a36908"
       },
       "outputs": [
         {
@@ -104,9 +104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Fo4un3-QkD-",
-        "outputId": "1f671cc9-e39b-4d62-df81-954b28648297"
+        "outputId": "0671c82a-ddc4-428b-e96f-b85f0d0dc1e6"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,10 +127,38 @@
         "!pip install transformers"
       ],
       "metadata": {
-        "id": "E1_MIfs5WYsD"
+        "id": "E1_MIfs5WYsD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4e75260d-ec0d-4865-c35e-83222d1f142a"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: transformers in /usr/local/lib/python3.10/dist-packages (4.34.1)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from transformers) (3.12.4)\n",
+            "Requirement already satisfied: huggingface-hub<1.0,>=0.16.4 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.17.3)\n",
+            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (1.23.5)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from transformers) (23.2)\n",
+            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (6.0.1)\n",
+            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (2023.6.3)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from transformers) (2.31.0)\n",
+            "Requirement already satisfied: tokenizers<0.15,>=0.14 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.14.1)\n",
+            "Requirement already satisfied: safetensors>=0.3.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.4.0)\n",
+            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.10/dist-packages (from transformers) (4.66.1)\n",
+            "Requirement already satisfied: fsspec in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.16.4->transformers) (2023.6.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.16.4->transformers) (4.5.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.3.0)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.4)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2023.7.22)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -495,18 +523,7 @@
         "model_name = \"manchu_to_english_babyMT\"\n",
         "\n",
         "# Save the model\n",
-        "model_save_path = f\"/content/drive/MyDrive/fine_tune_mbart/{model_name}\"\n",
-        "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
-        "\n",
-        "# Specify the path to your model\n",
-        "path_to_model = \"/content/drive/MyDrive/fine_tune_mbart/finished_model\"\n",
-        "\n",
-        "# Load the model and tokenizer from the saved model directory\n",
-        "model = AutoModelForSeq2SeqLM.from_pretrained(path_to_model)\n",
-        "tokenizer = AutoTokenizer.from_pretrained(path_to_model)\n",
-        "\n",
-        "# Now you can use 'model' and 'tokenizer' with your data for inference.\n",
-        "model.save_pretrained(model_save_path)"
+        "model_save_path = f\"/content/drive/MyDrive/fine_tune_mbart/{model_name}\"\n"
       ],
       "metadata": {
         "id": "GVVBPYKuKIgj"
@@ -518,15 +535,19 @@
       "cell_type": "code",
       "source": [
         "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
-        "# Ensure this path points to the directory where the model and tokenizer were saved\n",
-        "path_to_saved_model = \"/content/drive/MyDrive/fine_tune_mbart/finished_model\"  # Update with your path\n",
         "\n",
-        "# Load the model and tokenizer\n",
-        "model = AutoModelForSeq2SeqLM.from_pretrained(path_to_saved_model)\n",
-        "tokenizer = AutoTokenizer.from_pretrained(path_to_saved_model)\n",
+        "# Specify the path to your model\n",
+        "path_to_model = \"/content/drive/MyDrive/fine_tune_mbart/manchu_to_english_babyMT\"\n",
+        "\n",
+        "# Load the model and tokenizer from the saved model directory\n",
+        "model = AutoModelForSeq2SeqLM.from_pretrained(path_to_model)\n",
+        "tokenizer = AutoTokenizer.from_pretrained(\"/content/drive/MyDrive/my_tokenizer\")\n",
+        "\n",
+        "# Now you can use 'model' and 'tokenizer' with your data for inference.\n",
+        "model.save_pretrained(model_save_path)\n",
         "\n",
         "# Sample sentence for translation\n",
-        "sample_sentence = \"dergici. hafan coohai sain be fonjiha.\"\n",
+        "sample_sentence = \"orin de suje buhe\"\n",
         "\n",
         "# Encode the sentence\n",
         "inputs = tokenizer(\n",
@@ -534,21 +555,37 @@
         "    return_tensors=\"pt\",\n",
         "    padding=True,\n",
         "    truncation=True,\n",
-        "    max_length=512  # or another appropriate value based on your model's configuration\n",
+        "    max_length=50  # or another appropriate value based on your model's configuration\n",
         ")\n",
         "\n",
-        "# Translate the sentence\n",
-        "model.eval()  # Make sure the model is in evaluation mode\n",
-        "with torch.no_grad():  # No need to track gradients for inference\n",
-        "    outputs = model.generate(**inputs, forced_bos_token_id=tokenizer.lang_code_to_id[\"en_XX\"])\n",
-        "\n",
-        "# Decode the model output to get the translation\n",
-        "translated_sentence = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
-        "\n",
-        "print(\"Translated Sentence: \", translated_sentence)\n"
+        "\n"
       ],
       "metadata": {
         "id": "X-hz12vpArUb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Remove the 'token_type_ids' from inputs if present, as 'generate' does not accept this parameter\n",
+        "inputs.pop(\"token_type_ids\", None)\n",
+        "\n",
+        "# Translate the text\n",
+        "with torch.no_grad():\n",
+        "    outputs = model.generate(\n",
+        "        input_ids=inputs['input_ids'],  # We specify what we need for generation\n",
+        "        attention_mask=inputs['attention_mask']\n",
+        "    )\n",
+        "\n",
+        "# Decode the output tensor to a readable translation\n",
+        "translated_sentence = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
+        "\n",
+        "print(\"Translated Sentence: \", translated_sentence)"
+      ],
+      "metadata": {
+        "id": "D3zj-F3yd1I-"
       },
       "execution_count": null,
       "outputs": []
