--- a/Manchu_English_NMT_Tokenization_&_Fine_Tuning.ipynb
+++ b/Manchu_English_NMT_Tokenization_&_Fine_Tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyORO9i9XRnNRXDZcDboLu1U",
+      "authorship_tag": "ABX9TyP1TpA7PeRDxHLZVPbKKhAE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "94e8f709-d5a0-49b2-bacf-dac893a36908"
+        "outputId": "40bd8361-6306-49d2-9245-ceb4ada1650e"
       },
       "outputs": [
         {
@@ -104,7 +104,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Fo4un3-QkD-",
-        "outputId": "0671c82a-ddc4-428b-e96f-b85f0d0dc1e6"
+        "outputId": "fe98f2e6-cbc0-4c48-dcab-9b9111005908"
       },
       "execution_count": 2,
       "outputs": [
@@ -127,38 +127,10 @@
         "!pip install transformers"
       ],
       "metadata": {
-        "id": "E1_MIfs5WYsD",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4e75260d-ec0d-4865-c35e-83222d1f142a"
+        "id": "E1_MIfs5WYsD"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: transformers in /usr/local/lib/python3.10/dist-packages (4.34.1)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from transformers) (3.12.4)\n",
-            "Requirement already satisfied: huggingface-hub<1.0,>=0.16.4 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.17.3)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (1.23.5)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from transformers) (23.2)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (6.0.1)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (2023.6.3)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from transformers) (2.31.0)\n",
-            "Requirement already satisfied: tokenizers<0.15,>=0.14 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.14.1)\n",
-            "Requirement already satisfied: safetensors>=0.3.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.4.0)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.10/dist-packages (from transformers) (4.66.1)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.16.4->transformers) (2023.6.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.16.4->transformers) (4.5.0)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.3.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.4)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2.0.7)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2023.7.22)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -175,7 +147,7 @@
       "metadata": {
         "id": "udt14dcYXC2D"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -185,10 +157,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "XFLWFqbAXUY1"
+        "id": "XFLWFqbAXUY1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ecaaff51-7a90-4885-8cbc-7e9125c705da"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -235,7 +219,7 @@
       "metadata": {
         "id": "D9YpkM-GXKQ-"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -255,10 +239,22 @@
         "print(decoded_output)\n"
       ],
       "metadata": {
-        "id": "pA-FGzJ3Xgzt"
+        "id": "pA-FGzJ3Xgzt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f31600cc-744c-4065-8f18-93c6d2f702b7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "orin de jiyanggūn ing ilihathe General built camp on the 20th\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -292,17 +288,30 @@
         "\n"
       ],
       "metadata": {
-        "id": "-H4QkW1cj5Iz"
+        "id": "-H4QkW1cj5Iz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d22729d6-ef54-47bd-be98-432a9589f072"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "<pad>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "def tokenize_for_model(example):\n",
         "    # Tokenize the Manchu text and the English translation\n",
-        "    # This will give you the input_ids necessary for the model\n",
+        "    # This will give the input_ids necessary for the model\n",
         "    mc_tokenized = transformers_tokenizer.encode_plus(example['translation']['mc'], padding='max_length', truncation=True, max_length=128)\n",
         "    en_tokenized = transformers_tokenizer.encode_plus(example['translation']['en'], padding='max_length', truncation=True, max_length=128)\n",
         "\n",
@@ -318,7 +327,7 @@
       "metadata": {
         "id": "UKjIYa1ARJ3l"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -327,14 +336,12 @@
         "from datasets import Dataset\n",
         "import numpy as np\n",
         "\n",
-        "# Create a Dataset from your processed data\n",
+        "# Create a Dataset from processed data\n",
         "tokenized_dataset = Dataset.from_dict({\n",
         "    'input_ids': [entry['input_ids'] for entry in tokenized_dataset],\n",
         "    'attention_mask': [entry['attention_mask'] for entry in tokenized_dataset],  # Optional\n",
         "    'labels': [entry['labels'] for entry in tokenized_dataset],\n",
         "})\n",
-        "\n",
-        "# Now, you can proceed with your train-test split as you did before.\n",
         "\n",
         "# Calculate the size of each dataset split, based on the proportions.\n",
         "total_size = len(tokenized_dataset)\n",
@@ -356,14 +363,14 @@
       "metadata": {
         "id": "RokARbZrT1u4"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Prepare your data: each 'input_ids' and 'labels' should be a flat value, not a list.\n",
-        "# Here is a simplified transformation. Adjust as necessary for your specific case.\n",
+        "# Prepare data: each 'input_ids' and 'labels' should be a flat value, not a list.\n",
+        "# Here is a simplified transformation. Adjust as necessary for specific case.\n",
         "\n",
         "def transform_data_for_dataset(data_entry):\n",
         "    input_ids_list = data_entry['input_ids']  # Ensure this is actually a list of ints\n",
@@ -379,7 +386,7 @@
       "metadata": {
         "id": "VNzyS7JXy-Dj"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -441,7 +448,7 @@
       "metadata": {
         "id": "I9csur4Z297K"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -449,7 +456,7 @@
       "source": [
         "save_directory = \"/content/drive/MyDrive/my_tokenizer\"\n",
         "\n",
-        "# Save your tokenizer to the directory.\n",
+        "# Save tokenizer to the directory.\n",
         "transformers_tokenizer.save_pretrained(save_directory)\n",
         "\n",
         "# Load model\n",
@@ -461,14 +468,14 @@
         "\n",
         "\n",
         "# 'transformers_tokenizer' is the variable name in the outer scope.\n",
-        "data_collator = CustomDataCollator(tokenizer=transformers_tokenizer, pad_token_id=pad_token_id, pad_attention_mask=True) # or False, based on your preference\n",
+        "data_collator = CustomDataCollator(tokenizer=transformers_tokenizer, pad_token_id=pad_token_id, pad_attention_mask=True) # or False, based on preference\n",
         "\n",
         "# torch.cuda.empty_cache()\n"
       ],
       "metadata": {
         "id": "fEEyvKkPyzDq"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -480,7 +487,7 @@
         "    do_train=True,\n",
         "    do_eval=True,\n",
         "    evaluation_strategy=\"steps\",\n",
-        "    per_device_train_batch_size=1,  # Adjust based on your GPU's capabilities\n",
+        "    per_device_train_batch_size=1,  # Adjust based on GPU's capabilities; small GPU at colab, so make it 1\n",
         "    per_device_eval_batch_size=1,\n",
         "    predict_with_generate=True,\n",
         "    logging_steps=100,\n",
@@ -499,7 +506,7 @@
       "metadata": {
         "id": "ZspXUdO_LVrl"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -517,33 +524,127 @@
         ")\n",
         "\n",
         "# Start training\n",
-        "trainer.train()\n",
-        "\n",
+        "trainer.train()\n"
+      ],
+      "metadata": {
+        "id": "GVVBPYKuKIgj",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 232
+        },
+        "outputId": "f7707401-cf71-4798-f282-40c068b05913"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='578' max='578' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [578/578 11:21, Epoch 1/1]\n",
+              "    </div>\n",
+              "    <table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              " <tr style=\"text-align: left;\">\n",
+              "      <th>Step</th>\n",
+              "      <th>Training Loss</th>\n",
+              "      <th>Validation Loss</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>100</td>\n",
+              "      <td>28.228600</td>\n",
+              "      <td>2.539555</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>200</td>\n",
+              "      <td>1.891800</td>\n",
+              "      <td>1.123720</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>300</td>\n",
+              "      <td>1.200500</td>\n",
+              "      <td>1.147241</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>400</td>\n",
+              "      <td>1.277100</td>\n",
+              "      <td>1.010251</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>500</td>\n",
+              "      <td>1.133200</td>\n",
+              "      <td>0.983629</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table><p>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Define model's name\n",
         "model_name = \"manchu_to_english_babyMT\"\n",
         "\n",
         "# Save the model\n",
-        "model_save_path = f\"/content/drive/MyDrive/fine_tune_mbart/{model_name}\"\n"
+        "model_save_path = f\"/content/drive/MyDrive/fine_tune_mbart/{model_name}\"\n",
+        "model.save_pretrained(model_save_path)"
       ],
       "metadata": {
-        "id": "GVVBPYKuKIgj"
+        "id": "LtauGeKAsn9q"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# List all files in the model directory\n",
+        "model_dir = '/content/drive/MyDrive/fine_tune_mbart/manchu_to_english_babyMT'\n",
+        "print(os.listdir(model_dir))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f4SRqOSynHxA",
+        "outputId": "2ab81c50-c982-4f3f-f9c4-c75c74d0b709"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['config.json', 'generation_config.json', 'pytorch_model.bin']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
         "\n",
-        "# Specify the path to your model\n",
+        "# Specify the path to model\n",
         "path_to_model = \"/content/drive/MyDrive/fine_tune_mbart/manchu_to_english_babyMT\"\n",
         "\n",
         "# Load the model and tokenizer from the saved model directory\n",
-        "model = AutoModelForSeq2SeqLM.from_pretrained(path_to_model)\n",
+        "model = AutoModelForSeq2SeqLM.from_pretrained(\"/content/drive/MyDrive/fine_tune_mbart/manchu_to_english_babyMT\")\n",
         "tokenizer = AutoTokenizer.from_pretrained(\"/content/drive/MyDrive/my_tokenizer\")\n",
         "\n",
-        "# Now you can use 'model' and 'tokenizer' with your data for inference.\n",
+        "# Now you can use 'model' and 'tokenizer' with data for inference.\n",
         "model.save_pretrained(model_save_path)\n",
         "\n",
         "# Sample sentence for translation\n",
@@ -555,7 +656,7 @@
         "    return_tensors=\"pt\",\n",
         "    padding=True,\n",
         "    truncation=True,\n",
-        "    max_length=50  # or another appropriate value based on your model's configuration\n",
+        "    max_length=50  # or another appropriate value based on model's configuration\n",
         ")\n",
         "\n",
         "\n"
@@ -563,13 +664,12 @@
       "metadata": {
         "id": "X-hz12vpArUb"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Remove the 'token_type_ids' from inputs if present, as 'generate' does not accept this parameter\n",
         "inputs.pop(\"token_type_ids\", None)\n",
         "\n",
         "# Translate the text\n",
@@ -585,10 +685,22 @@
         "print(\"Translated Sentence: \", translated_sentence)"
       ],
       "metadata": {
-        "id": "D3zj-F3yd1I-"
+        "id": "D3zj-F3yd1I-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c1f95274-033a-4af2-cc02-b31169e11350"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Translated Sentence:  \n"
+          ]
+        }
+      ]
     }
   ]
 }
