--- a/Manchu_English_NMT_Tokenization_&_Fine_Tuning.ipynb
+++ b/Manchu_English_NMT_Tokenization_&_Fine_Tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP1TpA7PeRDxHLZVPbKKhAE",
+      "authorship_tag": "ABX9TyOly3q6Tku7vIzxIuumxZxq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -648,7 +648,7 @@
         "model.save_pretrained(model_save_path)\n",
         "\n",
         "# Sample sentence for translation\n",
-        "sample_sentence = \"orin de suje buhe\"\n",
+        "sample_sentence = \"orin de hiyasa. jurgan-i hafasa. aniya goidaha cooha juwe tanggū tucibufi.\"\n",
         "\n",
         "# Encode the sentence\n",
         "inputs = tokenizer(\n",
@@ -664,7 +664,7 @@
       "metadata": {
         "id": "X-hz12vpArUb"
       },
-      "execution_count": 23,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -689,15 +689,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c1f95274-033a-4af2-cc02-b31169e11350"
+        "outputId": "62d5049e-d36a-482c-80fd-c6abdb869492"
       },
-      "execution_count": 24,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Translated Sentence:  \n"
+            "Translated Sentence:  On the the the the the the of the of the of the of the of the\n"
           ]
         }
       ]
